feat: P4ADEV-1658 wf treasury opi ingestion file reading validating save data (#50)
Co-authored-by: serdimic <sergio.dimichele@eng.it>
Co-authored-by: antonioT90 <34568575+antonioT90@users.noreply.github.com>