@@ -1,11 +1,12 @@
 package it.gov.pagopa.payhub.activities.activity.treasury;
 
 import it.gov.pagopa.payhub.activities.dao.IngestionFlowFileDao;
+import it.gov.pagopa.payhub.activities.dao.TreasuryDao;
 import it.gov.pagopa.payhub.activities.dto.IngestionFlowFileDTO;
 import it.gov.pagopa.payhub.activities.dto.treasury.TreasuryIufResult;
 import it.gov.pagopa.payhub.activities.enums.IngestionFlowFileType;
 import it.gov.pagopa.payhub.activities.service.ingestionflow.IngestionFlowFileRetrieverService;
-import it.gov.pagopa.payhub.activities.service.treasury.TreasuryOpiParserService;
+import it.gov.pagopa.payhub.activities.service.treasury.*;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -21,27 +22,36 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class TreasuryOpiIngestionActivityTest {
 
   @Mock
-  private IngestionFlowFileDao ingestionFlowFileDao;
+  private IngestionFlowFileDao ingestionFlowFileDaoMock;
   @Mock
-  private IngestionFlowFileRetrieverService ingestionFlowFileRetrieverService;
+  private TreasuryDao treasuryDaoMock;
   @Mock
-  private TreasuryOpiParserService treasuryOpiParserService;
+  private IngestionFlowFileRetrieverService ingestionFlowFileRetrieverServiceMock;
+  @Mock
+  private TreasuryUnmarshallerService treasuryUnmarshallerServiceMock;
+  @Mock
+  private TreasuryMapperService treasuryMapperServiceMock;
+  @Mock
+  private TreasuryOpiParserService treasuryOpiParserServiceMock;
+  @Mock
+  private TreasuryOpiIngestionActivity treasuryOpiIngestionActivityMock;
 
-  private TreasuryOpiIngestionActivity treasuryOpiIngestionActivity;
 
   @BeforeEach
   void setUp() {
-    treasuryOpiIngestionActivity = new TreasuryOpiIngestionActivityImpl(
-            ingestionFlowFileDao,
-            ingestionFlowFileRetrieverService,
-            treasuryOpiParserService
-            );
+    treasuryOpiIngestionActivityMock = new TreasuryOpiIngestionActivityImpl(
+            ingestionFlowFileDaoMock,
+            ingestionFlowFileRetrieverServiceMock,
+            treasuryOpiParserServiceMock
+    );
   }
+
   private static final Long NOT_FOUND_INGESTION_FLOW_ID = 8L;
   private static final Long INVALID_INGESTION_FLOW_ID = 9L;
   private static final IngestionFlowFileType INVALID_INGESTION_FLOW_TYPE = IngestionFlowFileType.PAYMENTS_REPORTING;
@@ -49,7 +59,6 @@ class TreasuryOpiIngestionActivityTest {
           .ingestionFlowFileId(INVALID_INGESTION_FLOW_ID)
           .flowFileType(INVALID_INGESTION_FLOW_TYPE)
           .build());
-
 
   @Test
   void givenValidIngestionFlowWhenProcessFileThenOk() throws IOException {
@@ -61,51 +70,54 @@ class TreasuryOpiIngestionActivityTest {
     ingestionFlowFileDTO.setFileName("testFile.zip");
 
     Path mockPath = mock(Path.class);
-    List<Path> paths = Collections.singletonList(mockPath);
+    List<Path> paths = List.of(mockPath);
 
-    Mockito.when(ingestionFlowFileDao.findById(ingestionFlowFileId)).thenReturn(Optional.of(ingestionFlowFileDTO));
-    Mockito.when(ingestionFlowFileRetrieverService.retrieveAndUnzipFile(Path.of("/test/path"), "testFile.zip"))
+    Mockito.when(ingestionFlowFileDaoMock.findById(ingestionFlowFileId)).thenReturn(Optional.of(ingestionFlowFileDTO));
+    Mockito.when(ingestionFlowFileRetrieverServiceMock.retrieveAndUnzipFile(Path.of("/test/path"), "testFile.zip"))
             .thenReturn(paths);
-    Mockito.when(treasuryOpiParserService.parseData(mockPath))
-            .thenReturn(List.of());
+    Mockito.when(treasuryOpiParserServiceMock.parseData(mockPath, ingestionFlowFileDTO,  paths.size()))
+            .thenReturn(new TreasuryIufResult(Collections.singletonList("IUF123"), true));
 
     // When
-    TreasuryIufResult result = treasuryOpiIngestionActivity.processFile(ingestionFlowFileId);
+    TreasuryIufResult result = treasuryOpiIngestionActivityMock.processFile(ingestionFlowFileId);
 
     // Then
     Assertions.assertNotNull(result);
     Assertions.assertTrue(result.isSuccess());
-    Assertions.assertEquals(0, result.getIufs().size());
+    Assertions.assertEquals(1, result.getIufs().size());
+    Assertions.assertEquals("IUF123", result.getIufs().get(0));
   }
+
 
   @Test
   void givenIngestionFlowNotFoundWhenProcessFileThenNoSuccess() {
     //given
-    Mockito.when(ingestionFlowFileDao.findById(NOT_FOUND_INGESTION_FLOW_ID)).thenReturn(Optional.empty());
+    when(ingestionFlowFileDaoMock.findById(NOT_FOUND_INGESTION_FLOW_ID)).thenReturn(Optional.empty());
 
     //when
-    TreasuryIufResult result = treasuryOpiIngestionActivity.processFile(NOT_FOUND_INGESTION_FLOW_ID);
+    TreasuryIufResult result = treasuryOpiIngestionActivityMock.processFile(NOT_FOUND_INGESTION_FLOW_ID);
 
     //verify
     Assertions.assertFalse(result.isSuccess());
     Assertions.assertNotNull(result.getIufs());
     Assertions.assertEquals(0, result.getIufs().size());
-    Mockito.verify(ingestionFlowFileDao, Mockito.times(1)).findById(NOT_FOUND_INGESTION_FLOW_ID);
+    Mockito.verify(ingestionFlowFileDaoMock, Mockito.times(1)).findById(NOT_FOUND_INGESTION_FLOW_ID);
+    Mockito.verifyNoInteractions(treasuryDaoMock, ingestionFlowFileRetrieverServiceMock, treasuryUnmarshallerServiceMock, treasuryMapperServiceMock);
   }
 
   @Test
   void givenIngestionFlowTypeInvalidWhenProcessFileThenNoSuccess() {
     //given
-    Mockito.when(ingestionFlowFileDao.findById(INVALID_INGESTION_FLOW_ID)).thenReturn(INVALID_INGESTION_FLOW);
+    when(ingestionFlowFileDaoMock.findById(INVALID_INGESTION_FLOW_ID)).thenReturn(INVALID_INGESTION_FLOW);
 
     //when
-    TreasuryIufResult result = treasuryOpiIngestionActivity.processFile(INVALID_INGESTION_FLOW_ID);
+    TreasuryIufResult result = treasuryOpiIngestionActivityMock.processFile(INVALID_INGESTION_FLOW_ID);
 
     //verify
     Assertions.assertFalse(result.isSuccess());
     Assertions.assertNotNull(result.getIufs());
     Assertions.assertEquals(0, result.getIufs().size());
-    Mockito.verify(ingestionFlowFileDao, Mockito.times(1)).findById(INVALID_INGESTION_FLOW_ID);
+    Mockito.verify(ingestionFlowFileDaoMock, Mockito.times(1)).findById(INVALID_INGESTION_FLOW_ID);
+    Mockito.verifyNoInteractions(treasuryDaoMock, ingestionFlowFileRetrieverServiceMock, treasuryUnmarshallerServiceMock, treasuryMapperServiceMock);
   }
-
 }
